s7 prevent overflow in carousel

--- a/styles/screen7.css
+++ b/styles/screen7.css
@@ -13,6 +13,7 @@
     gap: 2rem;
     height: 100%;
     justify-content: center;
+    width: 100%; 
 }
 
 .s7-final-headline {
